Meta: Fix perfectionist alignment stuff

--- a/github-dark.css
+++ b/github-dark.css
@@ -4161,11 +4161,10 @@
   /* <g-emoji alias="heavy_check_mark"
     fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2714.png"
     ios-version="6.0">✔️</g-emoji> */
-  [alias="soon"], [alias="on"],
-  [alias="end"], [alias="heavy_dollar_sign"], [alias="registered"], [alias="tm"],
-  [alias="heavy_multiplication_x"], [alias="heavy_plus_sign"],
-  [alias="heavy_minus_sign"], [alias="heavy_division_sign"],
-  [alias="arrows_clockwise"], [alias="wavy_dash"],
+  [alias="soon"], [alias="on"], [alias="end"], [alias="heavy_dollar_sign"],
+  [alias="registered"], [alias="tm"], [alias="heavy_multiplication_x"],
+  [alias="heavy_plus_sign"], [alias="heavy_minus_sign"],
+  [alias="heavy_division_sign"], [alias="arrows_clockwise"], [alias="wavy_dash"],
   [alias="curly_loop"], [alias="copyright"], [alias="currency_exchange"],
   [alias="top"], [alias="back"], [alias="zzz"], [alias="notes"],
   [alias="musical_score"], [alias="black_large_square"],
@@ -7142,7 +7141,7 @@
     background-color: #181818;
   }
   .underline-dashed {
-	  background-image: linear-gradient(to right, #8e8e8e 50%, rgba(255,255,255,0) 0%);
+    background-image: linear-gradient(to right, #8e8e8e 50%, rgba(255, 255, 255, 0) 0%);
   }
   .bg-gray-dark {
     background-color: #181818 !important;
